# spel

./: LICENSE-MIT  README.md
docs/: reference.md  tutorial.md
docs/reference/: README.md  cli.md  client-gen.md  idl.md  macros.md  types.md
lez-cli/: Cargo.toml
lez-cli/src/: account_inspect.rs  lib.rs  parse.rs  pda.rs  tx.rs
lez-client-gen/src/: codegen.rs  ffi_codegen.rs  tests.rs  util.rs
lez-framework-core/: Cargo.toml
lez-framework-core/src/: idl.rs  lib.rs  pda.rs
lez-framework-core/tests/: variable_accounts.rs
lez-framework-macros/: Cargo.toml
lez-framework-macros/src/: lib.rs
